removed boost time stuff and replaced with STL chrono

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ if(APPLE)
 
     include_directories(
 		/opt/local/include
+        /usr/local/include
         ${PROJECT_SOURCE_DIR}/thirdparty
     )
 
